# aisp

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/workflows/: ci-pipeline.yml
aisp/: __init__.py  _base.py  exceptions.py
aisp/CSA/: __init__.py  _ai_immune_recognition_sys.py  _base.py
aisp/NSA/: __init__.py  _base.py  _negativeSelection.py  _negative_selection.py
aisp/base/: __init__.py  _base.py  _classifier.py  _clusterer.py  _optimizer.py  mutation.py  populations.py
aisp/base/core/: __init__.py  _base.py  _classifier.py  _clusterer.py  _optimizer.py
aisp/base/core/tests/: test_base.py
aisp/base/immune/: __init__.py  cell.py  mutation.py  populations.py
aisp/base/immune/tests/: test_mutation.py  test_populations.py
aisp/base/tests/: test_base.py  test_mutation.py  test_populations.py
aisp/csa/: __init__.py  _ai_immune_recognition_sys.py  _ai_recognition_sys.py  _artificial_recognition_ball.py  _base.py  _cell.py  _clonalg.py  _cs_core.py
aisp/csa/tests/: test_ai_immune_recognition_sys.py  test_ai_recognition_sys.py  test_clonalg.py
aisp/immune_network/: __init__.py  _ai_network.py
aisp/immune_network/tests/: test_ai_network.py
aisp/imnet/: __init__.py  _ai_network.py  _artificial_immune_network.py  _base.py
aisp/imnet/tests/: test_ai_network.py
aisp/ina/: __init__.py  _ai_network.py  _base.py  _opt_ai_network.py
aisp/ina/tests/: test_ai_network.py
aisp/nsa/: __init__.py  _base.py  _binary_negative_selection.py  _detectors_checkers.py  _negative_selection.py  _ns_core.py
aisp/nsa/tests/: test_detectors_checkers.py  test_negative_selection.py  test_ns_core.py
aisp/nta/: __init__.py  _artificial_immune_network.py  _base.py
aisp/utils/: __init__.py  _multiclass.py  display.py  distance.py  immune_mutation.py  metrics.py  multiclass.py  random.py  sanitizers.py  types.py  validation.py
aisp/utils/tests/: test_distance.py  test_immune_mutation.py  test_metrics.py  test_multiclass.py  test_sanitizers.py  test_validation.py
docs/: index.md
docs/advanced-guides/: BaseCSA.md  BaseNegativeSelection.md  utils.md
docs/assets/: template-docs-class.md  template-docs-functions.md  template-docs-module.md
docs/classes/: AIRS.md  NegativeSelection.md
docs/en/: architecture.md  clonal-selection-algorithms.md  faq.md  immune-network-theory.md  index.md  negative-selection.md
docs/en/advanced-guides/: utils.md
docs/en/advanced-guides/Base Classes Reference/: NegativeSelection.md
docs/en/advanced-guides/Core/: Negative Selection.md
docs/en/advanced-guides/base/: base.md  classifier.md  clusterer.md  optimizer.md
docs/en/api/: README.md  exceptions.md
docs/en/api/base/: README.md  base-classifier.md  base-clusterer.md  (+1 more)
docs/pt-br/: README.md  architecture.md  clonal-selection-algorithms.md  faq.md  immune-network-theory.md  index.md  negative-selection.md
docs/pt-br/advanced-guides/: utils.md
docs/pt-br/api/: exceptions.md
examples/AIRS/: example_with_randomly_generated_dataset-en.ipynb  example_with_randomly_generated_dataset-pt.ipynb  geyser_dataBase_example_en.ipynb  geyser_dataBase_example_pt-br.ipynb  iris_dataBase_example_en.ipynb  iris_dataBase_example_pt-br.ipynb  mushrooms_dataBase_example_en.ipynb  mushrooms_dataBase_example_pt-br.ipynb
examples/BNSA/: example_with_randomly_generated_dataset-en.ipynb  example_with_randomly_generated_dataset-pt.ipynb  mushrooms_dataBase_example_en.ipynb  mushrooms_dataBase_example_pt-br.ipynb
examples/RNSA/: example_with_randomly_generated_dataset-en.ipynb  example_with_randomly_generated_dataset-pt.ipynb  geyser_dataBase_example_en.ipynb  geyser_dataBase_example_pt-br.ipynb  iris_dataBase_example_en.ipynb  iris_dataBase_example_pt-br.ipynb
(+130 files in other folders)
