[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aisp"
version = "0.1.0"
authors = [
  { name="João Paulo", email="jpsilvabarr@gmail.com" },
]
description = "Pacote que implementa técnicas de sistemas imunológicos artificiais."
readme = "README.md"
requires-python = ">= 3.8.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
