[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "aisp"
version = "0.2.0.dev1"
authors = [
  { name="João Paulo da Silva Barros", email="jpsilvabarr@gmail.com" },
]

maintainers = [
  { name="Alison Zille Lopes",  email="alisonzille@gmail.com"},
]

description = "Package with techniques of artificial immune systems."

readme = "README.md"

requires-python = ">= 3.10"
license = "LGPL-3.0-only"
license-files = ["LICENSE"]

classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
  "numpy>=1.22.4",
  "numba>=0.59.0",
  "scipy>=1.8.1",
  "tqdm>=4.64.1",
]

keywords = [
    "Artificial Immune Systems",
    "classification",
    "Natural computing",
    "machine learning",
    "artificial intelligence",
    "AIS"
]

[project.urls]
Homepage = "https://ais-package.github.io/"
Documentation = "https://ais-package.github.io/docs/intro"
"Source Code" = "https://github.com/AIS-Package/aisp"
Tracker = "https://github.com/AIS-Package/aisp/issues"

[tool.setuptools]
packages = { find = { exclude = [
  "*test*",
  "*tests",
  "*tests/*",
  ".venv",
  ".idea",
  ".vscode",
  "docs"
]}}

[tool.pylint]
good-names = ["X", "N"]
disable = [
    "R0902",
    "R0917",
    "R0801",
    "R0914",
    "R0903"
]
max-args = 15

[tool.pydocstyle]
convention = "numpy"
add-ignore = ["D104", "D107"]